Added draft observations.
